@@ -1,0 +1,8 @@
+{
+  "data": {
+    "result": 20.56,
+    "realLostYield": 20.56,
+    "totalCompensation": 1.51,
+    "comment": ""
+  }
+}
