@@ -1,0 +1,8 @@
+{
+  "data": {
+    "result": 4.34,
+    "realLostYield": 4.34,
+    "totalCompensation": 0.31,
+    "comment": ""
+  }
+}
