@@ -1,0 +1,8 @@
+{
+  "data": {
+    "result": 23.83,
+    "realLostYield": 23.83,
+    "totalCompensation": 1.75,
+    "comment": ""
+  }
+}
